--- a/index.html
+++ b/index.html
@@ -90,11 +90,33 @@
             
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-1 border p-4">
-
+        <div class="border">
+            <div id="Like-data-show" class="grid grid-cols-1 sm:grid-cols-2 p-2 gap-4 max-h-40 ">
+            </div>
         </div>
+
+        
     </div>
 </section>
+
+      <!-- modal section  -->
+      <section >
+        <!-- Open the modal using ID.showModal() method -->
+        <button id="showModals" class="btn hidden" onclick="customModal.showModal()">open modal</button>
+        <dialog id="customModal" class="modal">
+          <div class="modal-box">
+            <div class="flex flex-col justify-center items-center" id="modal-content">
+
+            </div>
+            <div class="modal-action">
+              <form method="dialog">
+                <!-- if there is a button in form, it will close the modal -->
+                <button class="btn">Close</button>
+              </form>
+            </div>
+          </div>
+        </dialog>
+      </section>
 
 
     </main>
