--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+ 
 
         <!-- DaisyUI -->
         <link
@@ -18,6 +19,7 @@
     <script src="https://kit.fontawesome.com/8bcfb398b0.js" crossorigin="anonymous"></script>
     <!-- Local CSS -->
     <link rel="stylesheet" href="./style/style.css" />
+    
 </head>
 <body>
     <!-- Header section  -->
@@ -90,7 +92,7 @@
             
         </div>
 
-        <div class="border">
+        <div class="border rounded-xl">
             <div id="Like-data-show" class="grid grid-cols-1 sm:grid-cols-2 p-2 gap-4 max-h-40 ">
             </div>
         </div>
@@ -117,6 +119,26 @@
           </div>
         </dialog>
       </section>
+
+    <!-- Adopt module  -->
+
+      <!-- Modal -->
+  <div id="countdown-modal" class="hidden fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 z-50">
+    <div class="bg-white p-8 rounded-xl shadow-2xl relative w-11/12 sm:w-2/3 lg:w-1/3">
+      <button
+        class="absolute top-4 right-4 btn btn-sm btn-circle btn-outline"
+        onclick="closeModal()"
+      >✕</button>
+      <div class="flex justify-center">
+      <i class="fa-solid fa-handshake"></i>
+      </div>
+      <h3 class="text-3xl font-bold text-gray-700 text-center text-lime-600">Congrates</h3>
+      <p class="text-center py-2">Adoption process is start For your pet</p>
+      <p id="countdown-timer" class="py-6 text-4xl font-semibold text-center text-red-600">5</p>
+      <div class="flex justify-center">
+      </div>
+    </div>
+  </div>
 
 
     </main>
